[feat] listing all the invocations of a function
