# internal/function/model.go
@@ -1,6 +1,8 @@
 package function
 
 import (
+	"time"
+
 	"github.com/google/uuid"
 )
 
@@ -23,4 +25,15 @@ type Function struct {
 	Status      Status    `db:"status"       json:"status"`
 	ArchivePath string    `db:"archive_path" json:"archive_path"`
 	DrivePath   *string   `db:"drive_path"   json:"drive_path"`
+}
+
+type FunctionWithLatestInvocation struct {
+	FunctionId uuid.UUID
+	UserId     uuid.UUID
+	Status     Status
+
+	// Executions fields (can be nil if the function was never run)
+	LatestInvocationId        *uuid.UUID
+	LatestInvocationStatus    *string
+	LatestInvocationTimestamp *time.Time
 }
